# Shovel

./: CMakeLists.txt  LICENSE  Main.cxx  buildonwindows.h  console.cxx  console.h  editor.cxx  editor.h  editor_demo.cxx  editor_test.cxx  events.h  events_test.cxx  frame.cxx  frame.h  frame_demo.cxx  input.cxx  input.h  inputdecoder.cxx  inputdecoder.h  inputdecoder_demo.cxx  inputdecoder_test.cxx  interactive_demo.cxx  log.cxx  log.h  main.cxx  nameenum.h  nameenum_test.cxx  output.h  readme.md  renderbuffer.cxx  renderbuffer.h  renderbuffer_demo.cxx  renderbuffer_test.cxx  rundemo.sh  runme.sh  snake_demo.cxx  specialcharsmap.cxx  specialcharsmap.h  terminal.cxx  terminal.h  (+6 more)
test/: test.cpp  test.rc  test.vcxproj
test/x64/Debug/: test.exe.recipe  test.ilk  test.res  vc143.idb
test/x64/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  test.lastbuildstate
